# poblet.info-data

./: .gitignore  PROJECT.md  main.py  package.json  pyproject.toml
data/: creadors_poblet.csv  creadors_poblet.parquet
data/html/: poblet_instagram.html  poblet_podcast.html  poblet_tiktok.html  poblet_twitch.html  poblet_youtube.html
pipeline/: PipelineGUI.py  paths.py
pipeline/extractors/: DataCleaner.py  DataTransformer.py  Extractor.py  InstagramExtractor.py  TikTokExtractor.py  TwitchExtractor.py  YoutubeExtractor.py
pipeline/scripts/: insta_extract.py  twitch_extract.py
src/: DataClean.py  Extractor.py  PipelineGUI.py  analisis.ipynb  exportar_web.py  extract.py  main.py
src/extractors/: DataCleaner.py  DataTransformer.py  Extractor.py  InstagramExtractor.py  TikTokExtractor.py  TwitchExtractor.py  YoutubeExtractor.py
src/scripts/: podcast_extract.py  socialblade_scraper.ipynb  tiktok_extract.py  yt_extract.py
src/web/: dashboard_data.json  index.html
web/: package-lock.json  package.json
web/src/components/: BarChart.astro  CreatorTrendsExplorer.astro  DoughnutChart.astro  LineChartMulti.astro  MetricCard.astro
web/src/data/dashboard/: creator_timeseries.json  history.json  latest_snapshot.json  summary.json
web/src/layouts/: Layout.astro
web/src/lib/: creators.ts
web/src/pages/: evolucio.astro  index.astro
web/src/pages/creadors/: [slug].astro  index.astro
web/src/pages/plataformes/: [platform].astro
web/src/scripts/: chartjs-mount.ts  creator-explorer.ts
