[project]
name = "poblet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "customtkinter>=5.2.2",
    "instaloader>=4.15",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "yt-dlp>=2026.3.13",
]
